--- a/main.ipynb
+++ b/main.ipynb
@@ -14,13 +14,15 @@
     "\n",
     "kc = pd.read_csv(Path(prefix + \"kc.csv\", ), sep=';', header=0, index_col=0)\n",
     "follow = pd.read_csv(Path(prefix + \"kc_follow.csv\", ), sep=';', header=0, index_col=0)\n",
+    "ps = pd.read_csv(Path(prefix + \"ps.csv\", ), sep=';', header=0, index_col=0)\n",
     "\n",
     "G = nx.Graph()\n",
     "\n",
     "G.add_nodes_from([(idx, {'name':name}) for idx, name in zip(kc.index, kc['name'])])\n",
+    "G.add_node(0, name='root')\n",
     "G.add_edges_from([(idx, parent) for idx, parent in zip(kc.index, kc['parent'])])\n",
     "G.add_edges_from([(first, second) for first, second in follow[['kc1', 'kc2']].to_numpy()])\n",
-    "pos = nx.kamada_kawai_layout(G)"
+    "pos = nx.spectral_layout(G, scale=400, center=(200, 200))"
    ]
   },
   {
@@ -29,7 +31,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nx.draw(G, pos, width=1, node_size=5)"
+    "\n",
+    "elements = []\n",
+    "\n",
+    "elements += [\n",
+    "    {'data': {'id': str(i), 'label': params['name']}, 'position': {'x': int(pos[i][0]), 'y': int(pos[i][1])}} for i, params in G.nodes(data=True)\n",
+    "]\n",
+    "\n",
+    "elements += [\n",
+    "    {'data': {'source': str(s), 'target': str(t)}} for s, t in G.edges()\n",
+    "]\n"
    ]
   },
   {
@@ -38,80 +49,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.graph_objects as go\n",
+    "import json\n",
+    "import dash_cytoscape as cyto\n",
+    "from dash import html, Input, Output\n",
+    "from jupyter_dash import JupyterDash\n",
     "\n",
-    "edge_x = []\n",
-    "edge_y = []\n",
-    "for edge in G.edges():\n",
-    "    x0, y0 = pos[edge[0]]\n",
-    "    x1, y1 = pos[edge[1]]\n",
-    "    edge_x.append(x0)\n",
-    "    edge_x.append(x1)\n",
-    "    edge_x.append(None)\n",
-    "    edge_y.append(y0)\n",
-    "    edge_y.append(y1)\n",
-    "    edge_y.append(None)\n",
+    "app = JupyterDash(__name__)\n",
     "\n",
-    "edge_trace = go.Scatter(\n",
-    "    x=edge_x, y=edge_y,\n",
-    "    line=dict(width=0.5, color='#888'),\n",
-    "    hoverinfo='none',\n",
-    "    mode='lines')\n",
+    "styles = json.load(open('styles.json', 'r'))\n",
     "\n",
-    "node_x = []\n",
-    "node_y = []\n",
-    "for node in G.nodes():\n",
-    "    x, y = pos[node]\n",
-    "    node_x.append(x)\n",
-    "    node_y.append(y)\n",
+    "cyto.load_extra_layouts()\n",
     "\n",
-    "node_trace = go.Scatter(\n",
-    "    x=node_x, y=node_y,\n",
-    "    mode='markers',\n",
-    "    hoverinfo='text',\n",
-    "    marker=dict(\n",
-    "        showscale=True,\n",
-    "        # colorscale options\n",
-    "        #'Greys' | 'YlGnBu' | 'Greens' | 'YlOrRd' | 'Bluered' | 'RdBu' |\n",
-    "        #'Reds' | 'Blues' | 'Picnic' | 'Rainbow' | 'Portland' | 'Jet' |\n",
-    "        #'Hot' | 'Blackbody' | 'Earth' | 'Electric' | 'Viridis' |\n",
-    "        colorscale='YlGnBu',\n",
-    "        reversescale=True,\n",
-    "        color=[],\n",
-    "        size=10,\n",
-    "        colorbar=dict(\n",
-    "            thickness=15,\n",
-    "            title='Node Connections',\n",
-    "            xanchor='left',\n",
-    "            titleside='right'\n",
-    "        ),\n",
-    "        line_width=2))\n",
+    "app.layout = html.Div([\n",
+    "    cyto.Cytoscape(\n",
+    "        id='cytoscape',\n",
+    "        elements=elements,\n",
+    "        style=styles['cytoscape'],\n",
+    "        layout={'name': 'dagre'},\n",
+    "        responsive=True,\n",
+    "    )\n",
+    "])\n",
     "\n",
-    "node_adjacencies = []\n",
-    "node_text = []\n",
-    "for node, adjacencies in enumerate(G.adjacency()):\n",
-    "    node_adjacencies.append(len(adjacencies[1]))\n",
-    "    node_text.append('# of connections: '+str(len(adjacencies[1])))\n",
-    "\n",
-    "node_trace.marker.color = node_adjacencies\n",
-    "node_trace.text = node_text\n",
-    "\n",
-    "fig = go.Figure(data=[edge_trace, node_trace],\n",
-    "             layout=go.Layout(\n",
-    "                title='<br>Network graph made with Python',\n",
-    "                titlefont_size=16,\n",
-    "                showlegend=False,\n",
-    "                hovermode='closest',\n",
-    "                margin=dict(b=20,l=5,r=5,t=40),\n",
-    "                annotations=[ dict(\n",
-    "                    text=\"\",\n",
-    "                    showarrow=False,\n",
-    "                    xref=\"paper\", yref=\"paper\",\n",
-    "                    x=0.005, y=-0.002 ) ],\n",
-    "                xaxis=dict(showgrid=False, zeroline=False, showticklabels=False),\n",
-    "                yaxis=dict(showgrid=False, zeroline=False, showticklabels=False))\n",
-    "                )\n",
-    "fig.show()"
+    "if __name__ == \"__main__\":\n",
+    "    app.run_server(debug=True)"
    ]
   }
  ],
