--- a/main.ipynb
+++ b/main.ipynb
@@ -9,6 +9,7 @@
     "import pandas as pd\n",
     "import networkx as nx\n",
     "from pathlib import Path\n",
+    "from networkx.drawing.nx_agraph import graphviz_layout\n",
     "\n",
     "prefix = 'data/umimematikucz-system_'\n",
     "\n",
@@ -22,7 +23,8 @@
     "G.add_node(0, name='root')\n",
     "G.add_edges_from([(idx, parent) for idx, parent in zip(kc.index, kc['parent'])])\n",
     "G.add_edges_from([(first, second) for first, second in follow[['kc1', 'kc2']].to_numpy()])\n",
-    "pos = nx.spectral_layout(G, scale=400, center=(200, 200))"
+    "pos = nx.spectral_layout(G, scale=400, center=(200, 200))\n",
+    "# pos = graphviz_layout(G, prog='dot')"
    ]
   },
   {
