--- a/main.ipynb
+++ b/main.ipynb
@@ -2,174 +2,259 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import networkx as nx\n",
+    "import json\n",
     "from pathlib import Path\n",
-    "from networkx.drawing.nx_agraph import graphviz_layout\n",
+    "from unidecode import unidecode\n",
+    "from networkx.drawing.nx_pydot import graphviz_layout\n",
     "\n",
     "prefix = 'data/umimematikucz-system_'\n",
     "\n",
     "kc = pd.read_csv(Path(prefix + \"kc.csv\", ), sep=';', header=0, index_col=0)\n",
     "follow = pd.read_csv(Path(prefix + \"kc_follow.csv\", ), sep=';', header=0, index_col=0)\n",
-    "ps = pd.read_csv(Path(prefix + \"ps.csv\", ), sep=';', header=0, index_col=0)\n",
+    "#ps = pd.read_csv(Path(prefix + \"ps.csv\", ), sep=';', header=0, index_col=0)\n",
     "\n",
-    "G = nx.Graph()\n",
+    "SIZE = (2000, 2000)\n",
+    "G = nx.DiGraph(size=SIZE)\n",
     "\n",
-    "G.add_nodes_from([(idx, {'name':name}) for idx, name in zip(kc.index, kc['name'])])\n",
-    "G.add_node(0, name='root')\n",
-    "G.add_edges_from([(idx, parent) for idx, parent in zip(kc.index, kc['parent'])])\n",
-    "G.add_edges_from([(first, second) for first, second in follow[['kc1', 'kc2']].to_numpy()])\n",
-    "pos = nx.spectral_layout(G, scale=400, center=(200, 200))\n",
-    "# pos = graphviz_layout(G, prog='dot')"
+    "G.add_node(0, label='\"Root\"', color='black')\n",
+    "G.add_nodes_from([(int(idx), {'label':f'\"{unidecode(name)}\"', 'color': 'black'}) for idx, name in zip(kc.index, kc['name'])])\n",
+    "G.add_edges_from([(int(idx), int(parent)) for idx, parent in zip(kc.index, kc['parent'])], color='black')\n",
+    "G.add_edges_from([(int(first), int(second)) for first, second in follow[['kc1', 'kc2']].to_numpy()], color='silver')\n",
+    "#pos = nx.spring_layout(G, scale=scale, center=(scale//2, scale//2), k=0.1)\n",
+    "pos = graphviz_layout(G, prog=\"dot\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def encode_node(idx, name, position):\n",
-    "    return {'data': {'id': str(idx), 'label': name}, 'position': {'x': int(position[0]), 'y': int(position[1])}}\n",
-    "\n",
-    "def encode_edge(source, target):\n",
-    "    return {'data': {'source': str(source), 'target': str(target)}}\n",
-    "\n",
-    "elements = []\n",
-    "\n",
-    "elements += [encode_node(idx, params['name'], pos[idx]) for idx, params in G.nodes(data=True)]\n",
-    "elements += [encode_edge(s, t) for s, t in G.edges()]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
+    "\n",
+    "def is_element_edge(element):\n",
+    "    return 'source' in element['data']\n",
+    "\n",
+    "def graph_index_from_elements(element):\n",
+    "    if 'data' in element:\n",
+    "        return int(element['data']['id'][1:])\n",
+    "    return int(element['id'][1:])\n",
+    "\n",
+    "def edge_pair_from_elements(element):\n",
+    "    return int(element['data']['source'][1:]), int(element['data']['target'][1:])\n",
+    "\n",
+    "def garph_index_to_elements(idx, edge=False):\n",
+    "    return f'e{idx}' if edge else f'n{idx}'\n",
+    "\n",
+    "\n",
+    "def graph_edge_as_elements(source, target, params):\n",
+    "    return {\n",
+    "        'data': {\n",
+    "            'source': garph_index_to_elements(source),\n",
+    "            'target': garph_index_to_elements(target),\n",
+    "            'color': params['color']\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "def graph_as_elements(G, pos):\n",
+    "    elements = [{'data': {\n",
+    "        'id': garph_index_to_elements(idx),\n",
+    "        'label':params['label'],\n",
+    "        'color': params['color']}, \n",
+    "        'position': {'x': pos[idx][0], 'y': pos[idx][1]}}\n",
+    "        for idx, params in G.nodes(data=True)\n",
+    "    ]\n",
+    "    elements += [graph_edge_as_elements(s, t, params) for s, t, params in G.edges(data=True)]\n",
+    "    return elements\n",
+    "\n",
+    "def graph_from_elements(elements):\n",
+    "    G = nx.DiGraph(size=SIZE)\n",
+    "    G.add_nodes_from([(graph_index_from_elements(elem), {'label':elem['data']['label'], 'color': elem['data']['color']})\n",
+    "                      for elem in elements if 'source' not in elem['data']])\n",
+    "    G.add_edges_from([edge_pair_from_elements(elem) for elem in elements if 'source' in elem['data'] and elem['data']['color'] == 'black'], color='black')\n",
+    "    G.add_edges_from([edge_pair_from_elements(elem) for elem in elements if 'source' in elem['data'] and elem['data']['color'] == 'silver'], color='silver')\n",
+    "    return G"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import dash_cytoscape as cyto\n",
     "import dash_bootstrap_components as dbc\n",
     "import src.custom_components as cc\n",
-    "from dash import dcc, html, Input, Output, callback_context\n",
+    "from dash import dcc, html, Input, Output\n",
+    "from dash import callback_context as ctx\n",
     "from jupyter_dash import JupyterDash\n",
     "from dash.exceptions import PreventUpdate\n",
     "\n",
-    "app = JupyterDash(__name__)\n",
+    "app = JupyterDash(__name__, external_stylesheets=[dbc.themes.FLATLY])\n",
     "\n",
     "styles = json.load(open('styles.json', 'r'))\n",
     "\n",
-    "cyto.load_extra_layouts()\n",
+    "options = [{'label':val, 'value':val} for val in ['dot', 'twopi', 'fdp', 'sfdp', 'circo']]\n",
+    "tool_panel = dbc.Card(dbc.CardBody(dbc.Row([\n",
+    "    dbc.Col(dbc.Select(\n",
+    "        id='layout_select',\n",
+    "        placeholder=f\"Layout ({options[0]['label']})\", # options[0]['label']\n",
+    "        options=options,\n",
+    "    ), width=2),\n",
+    "    dbc.Col(dbc.RadioItems(\n",
+    "        id=\"mode_btn\",\n",
+    "        className=\"btn-group\",\n",
+    "        inputClassName=\"btn-check\",\n",
+    "        labelClassName=\"btn btn-outline-primary\",\n",
+    "        labelCheckedClassName=\"active\",\n",
+    "        options=[\n",
+    "            {\"label\": name, \"value\": val} for val, name in enumerate(['Explore', 'Add/Remove edges', 'TBD'])\n",
+    "        ],\n",
+    "        value=0\n",
+    "    ), width=6),\n",
+    "    dbc.Col(\n",
+    "        dcc.Upload(dbc.Button('Upload Graph'), id='upload_graph'),\n",
+    "        width=2\n",
+    "    ),\n",
+    "    dbc.Col(\n",
+    "        dbc.Button('Download Graph', id='download_btn'),\n",
+    "        width=2\n",
+    "    ),\n",
+    "])))\n",
     "\n",
-    "app.layout = cc.place_in_container([\n",
-    "    dbc.Row([\n",
-    "        html.Div(cyto.Cytoscape(\n",
-    "            id='cytoscape',\n",
-    "            elements=elements,\n",
-    "            style=styles['cytoscape'],\n",
-    "            layout={'name': 'klay'}, # klay\n",
-    "            responsive=True,\n",
-    "            autoRefreshLayout=False\n",
-    "        )),\n",
-    "    ]),\n",
-    "    dbc.Row([\n",
-    "        dcc.Dropdown(\n",
-    "            id='graph_layout',\n",
-    "            value='klay',\n",
-    "            clearable=False,\n",
-    "            options=[\n",
-    "                {'label': name.capitalize(), 'value': name}\n",
-    "                for name in ['klay', 'random', 'cose', 'concentric', 'breadthfirst']\n",
-    "            ]\n",
-    "        )\n",
-    "    ]),\n",
-    "    html.Div(id = 'last_clicked'), # , style = {'display': 'none'}\n",
-    "])"
+    "main_graph = dbc.Row(dbc.Col(\n",
+    "    html.Div(cyto.Cytoscape(\n",
+    "        id='cytoscape',\n",
+    "        elements=[],\n",
+    "        style=styles['cytoscape'],\n",
+    "        layout={'name': 'preset', 'directed': True},\n",
+    "        responsive=False,\n",
+    "        autoRefreshLayout=False,\n",
+    "        stylesheet=styles['stylesheet']\n",
+    "    ))\n",
+    "))\n",
+    "\n",
+    "meta = html.Div([\n",
+    "    #html.Div(id = 'last_clicked', style={'display':'none'}),\n",
+    "    html.Div(id='test'),\n",
+    "    dcc.Download(id='download'),\n",
+    "    dcc.Store(id='graph_elems'),\n",
+    "])\n",
+    "\n",
+    "app.layout = html.Div(dbc.Container([\n",
+    "    tool_panel,\n",
+    "    html.Br(),\n",
+    "    main_graph,\n",
+    "    html.Br(),\n",
+    "    meta,\n",
+    "]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\"\"\"\n",
-    "@app.callback(\n",
-    "        Output('last_clicked', 'children'),\n",
-    "        # Input('last_clicked', 'children'),\n",
-    "        Input('cytoscape', 'tapNodeData'),\n",
-    ")\n",
-    "def update_last_clicked(clicked):\n",
-    "    return json.dumps(clicked)\n",
-    "\"\"\"\n",
+    "from base64 import b64decode\n",
     "\n",
     "@app.callback(\n",
-    "        Output('last_clicked', 'children'),\n",
-    "        Input('cytoscape', 'tapNodeData'),\n",
-    "        Input('cytoscape', 'elements'),\n",
-    "        Input('cytoscape', 'selectedNodeData')\n",
+    "    Output('graph_elems', 'data'),\n",
+    "    Input('upload_graph', 'contents'),\n",
+    "    prevent_initial_call=True,\n",
     ")\n",
-    "def update_last_clicked(clicked, elements, selected):\n",
-    "    if callback_context.triggered and callback_context.triggered[0]['prop_id'].split('.')[1] != 'tapNodeData':\n",
-    "        raise PreventUpdate\n",
-    "    return json.dumps(elements[-1])\n",
+    "def upload_graph(upload):\n",
+    "    # TODO more robust solution\n",
+    "    # return json.loads(b64decode(upload).decode('latin1'))\n",
+    "    return graph_as_elements(G, pos)\n",
+    "\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output('download', 'data'),\n",
+    "    Input('graph_elems', 'data'),\n",
+    "    Input('download_btn', 'n_clicks'),\n",
+    "    prevent_initial_call=True,\n",
+    ")\n",
+    "def download_graph(data, _):\n",
+    "    if ctx.triggered_id == 'download_btn':\n",
+    "        return {'content': data, 'filename':'updated_graph.json'}\n",
+    "    raise PreventUpdate\n",
     "\n",
     "\n",
     "def filter_for_edge(edge):\n",
-    "    return lambda e: 'source' not in e['data'] or e['data']['source'] != edge['data']['source'] or e['data']['target'] != edge['data']['target']\n",
+    "    return lambda e: 'source' not in e['data'] or \\\n",
+    "        'target' not in e['data'] or \\\n",
+    "        e['data']['source'] != edge['data']['source'] or \\\n",
+    "        e['data']['target'] != edge['data']['target']\n",
     "\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output('test', 'children'),\n",
+    "    Input('cytoscape', 'elements'),\n",
+    ")\n",
+    "def test_out(inp):\n",
+    "    return ''\n",
+    "\n",
+    "\n",
+    "def modify_by_id(elements, id, key, value):\n",
+    "    elems = [elem for elem in elements if elem['data']['id'] == id]\n",
+    "    if len(elems) != 1:\n",
+    "        raise RuntimeError(f'Detected {len(elems)} elements for {id=}. Expected 1.')\n",
+    "    elem = elems[0]\n",
+    "    elem['data'][key] = value\n",
+    "    return [elem for elem in elements if elem['data']['id'] != id] + [elem]\n",
     "\n",
     "@app.callback(\n",
     "        Output('cytoscape', 'elements'),\n",
+    "        Input('mode_btn', 'value'),\n",
     "        Input('cytoscape', 'tapNodeData'),\n",
-    "        Input('cytoscape', 'elements'),\n",
-    "        Input('cytoscape', 'selectedNodeData')\n",
+    "        Input('cytoscape', 'selectedNodeData'),\n",
+    "        Input('graph_elems', 'data'),\n",
+    "        prevent_initial_call=True,\n",
     ")\n",
-    "def update_graph(clicked, elements, selected):\n",
-    "    if callback_context.triggered and callback_context.triggered[0]['prop_id'].split('.')[1] != 'tapNodeData' or not selected:\n",
-    "        raise PreventUpdate\n",
-    "    \n",
-    "    edge = encode_edge(int(selected[-1]['id']), clicked['id'])\n",
-    "    old_length = len(elements)\n",
-    "    elements = list(filter(filter_for_edge(edge), elements))\n",
-    "    if len(elements) == old_length:\n",
-    "        elements.append(edge)\n",
-    "        \n",
-    "    return elements\n",
-    "    # TODO adding and removing edges\n",
-    "    # TODO layout\n",
-    "    # TODO nodes?\n",
-    "    # TODO dfs order after doubleclick\n",
+    "def update_graph(mode, clicked, selected, elements):\n",
+    "    if ctx.triggered_id == 'graph_elems':\n",
+    "        graph = graph_from_elements(elements)\n",
+    "        position = graphviz_layout(graph, prog=\"dot\")\n",
+    "        return graph_as_elements(graph, position)\n",
     "\n",
-    "@app.callback(\n",
-    "    Output('cytoscape', 'layout'),\n",
-    "    Input('graph_layout', 'value')\n",
-    ")\n",
-    "def update_layout(layout):\n",
-    "    return {\n",
-    "        'name': layout,\n",
-    "        'animate': True\n",
-    "    }"
+    "    if ctx.triggered[0]['prop_id'].split('.')[1] == 'tapNodeData':\n",
+    "        graph = graph_from_elements(elements)\n",
+    "        for i in range(len(elements)):\n",
+    "            if is_element_edge(elements[i]):\n",
+    "                continue\n",
+    "            if elements[i]['data']['id'] == clicked['id']:\n",
+    "                elements[i]['data']['color'] = 'red'\n",
+    "            elif graph_index_from_elements(elements[i]) in graph.successors(graph_index_from_elements(clicked)):\n",
+    "                elements[i]['data']['color'] = 'orange'\n",
+    "            elif graph_index_from_elements(elements[i]) in graph.predecessors(graph_index_from_elements(clicked)):\n",
+    "                elements[i]['data']['color'] = 'yellow'\n",
+    "            else:\n",
+    "                elements[i]['data']['color'] = 'black'\n",
+    "\n",
+    "        if mode == 1 and selected and clicked != selected[-1]:\n",
+    "            edge = graph_edge_as_elements(graph_index_from_elements(selected[-1]), graph_index_from_elements(clicked), {'color':'blue'})\n",
+    "            old_length = len(elements)\n",
+    "            elements = list(filter(filter_for_edge(edge), elements))\n",
+    "            if len(elements) == old_length:\n",
+    "                elements.append(edge)\n",
+    "            \n",
+    "        return elements\n",
+    "\n",
+    "    raise PreventUpdate\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dash app running on http://127.0.0.1:8050/\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == \"__main__\":\n",
     "    app.run_server(debug=True)"
