--- a/main.ipynb
+++ b/main.ipynb
@@ -215,12 +215,13 @@
     "        Input('mode_btn', 'value'),\n",
     "        Input('cytoscape', 'tapNodeData'),\n",
     "        Input('cytoscape', 'selectedNodeData'),\n",
+    "        Input('cytoscape', 'elements'),\n",
     "        Input('graph_elems', 'data'),\n",
     "        prevent_initial_call=True,\n",
     ")\n",
-    "def update_graph(mode, clicked, selected, elements):\n",
+    "def update_graph(mode, clicked, selected, elements, new_elements):\n",
     "    if ctx.triggered_id == 'graph_elems':\n",
-    "        graph = graph_from_elements(elements)\n",
+    "        graph = graph_from_elements(new_elements)\n",
     "        position = graphviz_layout(graph, prog=\"dot\")\n",
     "        return graph_as_elements(graph, position)\n",
     "\n",
@@ -229,7 +230,7 @@
     "        for i in range(len(elements)):\n",
     "            if is_element_edge(elements[i]):\n",
     "                continue\n",
-    "            if elements[i]['data']['id'] == clicked['id']:\n",
+    "            elif elements[i]['data']['id'] == clicked['id']:\n",
     "                elements[i]['data']['color'] = 'red'\n",
     "            elif graph_index_from_elements(elements[i]) in graph.successors(graph_index_from_elements(clicked)):\n",
     "                elements[i]['data']['color'] = 'orange'\n",
