highlight selected, shape

--- a/main.ipynb
+++ b/main.ipynb
@@ -19,12 +19,22 @@
     "follow = pd.read_csv(Path(prefix + \"kc_follow.csv\", ), sep=';', header=0, index_col=0)\n",
     "#ps = pd.read_csv(Path(prefix + \"ps.csv\", ), sep=';', header=0, index_col=0)\n",
     "\n",
-    "SIZE = (2000, 2000)\n",
+    "SIZE = (100, 100)\n",
+    "def recursively_change_shape(node, shape):\n",
+    "    nx.set_node_attributes(G, {node:shape}, name='shape')\n",
+    "    for pred in G.predecessors(node):\n",
+    "        recursively_change_shape(pred, shape)\n",
+    "\n",
+    "shapes = ['diamond', 'triangle', 'rectangle', 'ellipse', 'octagon', 'v', 'hexagon', 'parallelogram', 'round-rectangle']\n",
     "G = nx.DiGraph(size=SIZE)\n",
     "\n",
-    "G.add_node(0, label='\"Root\"', color='black')\n",
-    "G.add_nodes_from([(int(idx), {'label':f'\"{unidecode(name)}\"', 'color': 'black'}) for idx, name in zip(kc.index, kc['name'])])\n",
+    "G.add_node(0, label='\"Root\"', color='black', shape='ellipse')\n",
+    "G.add_nodes_from([(int(idx), {'label':f'\"{unidecode(name)}\"', 'color': 'black', 'shape':'ellipse'}) for idx, name in zip(kc.index, kc['name'])])\n",
     "G.add_edges_from([(int(idx), int(parent)) for idx, parent in zip(kc.index, kc['parent'])], color='black')\n",
+    "\n",
+    "for idx, shape in zip(G.predecessors(0), shapes):\n",
+    "    recursively_change_shape(idx, shape)\n",
+    "\n",
     "G.add_edges_from([(int(first), int(second)) for first, second in follow[['kc1', 'kc2']].to_numpy()], color='silver')\n",
     "#pos = nx.spring_layout(G, scale=scale, center=(scale//2, scale//2), k=0.1)\n",
     "pos = graphviz_layout(G, prog=\"dot\")"
@@ -36,8 +46,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
     "def is_element_edge(element):\n",
     "    return 'source' in element['data']\n",
     "\n",
@@ -63,23 +71,33 @@
     "    }\n",
     "\n",
     "def graph_as_elements(G, pos):\n",
-    "    elements = [{'data': {\n",
-    "        'id': garph_index_to_elements(idx),\n",
-    "        'label':params['label'],\n",
-    "        'color': params['color']}, \n",
-    "        'position': {'x': pos[idx][0], 'y': pos[idx][1]}}\n",
-    "        for idx, params in G.nodes(data=True)\n",
-    "    ]\n",
+    "    elements = [{\n",
+    "            'data': {\n",
+    "                'id': garph_index_to_elements(idx),\n",
+    "                'label':params['label'],\n",
+    "                'color': params['color']\n",
+    "            } | params, \n",
+    "            'position': {'x': pos[idx][0], 'y': pos[idx][1]}\n",
+    "        } for idx, params in G.nodes(data=True) ]\n",
     "    elements += [graph_edge_as_elements(s, t, params) for s, t, params in G.edges(data=True)]\n",
     "    return elements\n",
     "\n",
     "def graph_from_elements(elements):\n",
     "    G = nx.DiGraph(size=SIZE)\n",
-    "    G.add_nodes_from([(graph_index_from_elements(elem), {'label':elem['data']['label'], 'color': elem['data']['color']})\n",
+    "    G.add_nodes_from([(graph_index_from_elements(elem), elem['data'])\n",
     "                      for elem in elements if 'source' not in elem['data']])\n",
     "    G.add_edges_from([edge_pair_from_elements(elem) for elem in elements if 'source' in elem['data'] and elem['data']['color'] == 'black'], color='black')\n",
     "    G.add_edges_from([edge_pair_from_elements(elem) for elem in elements if 'source' in elem['data'] and elem['data']['color'] == 'silver'], color='silver')\n",
     "    return G"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_from_elements(graph_as_elements(G, pos)).nodes(data=True)[1]"
    ]
   },
   {
@@ -100,7 +118,7 @@
     "\n",
     "styles = json.load(open('styles.json', 'r'))\n",
     "\n",
-    "options = [{'label':val, 'value':val} for val in ['dot', 'twopi', 'fdp', 'sfdp', 'circo']]\n",
+    "options = [{'label':val, 'value':val} for val in ['dot', 'fdp', 'twopi', 'circo']] # twopi, sfdp, circo\n",
     "tool_panel = dbc.Card(dbc.CardBody(dbc.Row([\n",
     "    dbc.Col(dbc.Select(\n",
     "        id='layout_select',\n",
@@ -213,34 +231,39 @@
     "@app.callback(\n",
     "        Output('cytoscape', 'elements'),\n",
     "        Input('mode_btn', 'value'),\n",
-    "        Input('cytoscape', 'tapNodeData'),\n",
     "        Input('cytoscape', 'selectedNodeData'),\n",
     "        Input('cytoscape', 'elements'),\n",
     "        Input('graph_elems', 'data'),\n",
+    "        Input('layout_select', 'value'),\n",
     "        prevent_initial_call=True,\n",
     ")\n",
-    "def update_graph(mode, clicked, selected, elements, new_elements):\n",
+    "def update_graph(mode, selected, elements, new_elements, layout):\n",
     "    if ctx.triggered_id == 'graph_elems':\n",
     "        graph = graph_from_elements(new_elements)\n",
-    "        position = graphviz_layout(graph, prog=\"dot\")\n",
+    "        position = graphviz_layout(graph, prog=layout)\n",
+    "        return graph_as_elements(graph, position)\n",
+    "    \n",
+    "    if ctx.triggered_id == 'layout_select':\n",
+    "        graph = graph_from_elements(elements)\n",
+    "        position = graphviz_layout(graph, prog=layout)\n",
     "        return graph_as_elements(graph, position)\n",
     "\n",
-    "    if ctx.triggered[0]['prop_id'].split('.')[1] == 'tapNodeData':\n",
+    "    if ctx.triggered[0]['prop_id'].split('.')[1] == 'selectedNodeData':\n",
     "        graph = graph_from_elements(elements)\n",
     "        for i in range(len(elements)):\n",
     "            if is_element_edge(elements[i]):\n",
     "                continue\n",
-    "            elif elements[i]['data']['id'] == clicked['id']:\n",
+    "            elif any(elements[i]['data']['id'] == s['id'] for s in selected):\n",
     "                elements[i]['data']['color'] = 'red'\n",
-    "            elif graph_index_from_elements(elements[i]) in graph.successors(graph_index_from_elements(clicked)):\n",
+    "            elif any(graph_index_from_elements(elements[i]) in graph.successors(graph_index_from_elements(s)) for s in selected):\n",
     "                elements[i]['data']['color'] = 'orange'\n",
-    "            elif graph_index_from_elements(elements[i]) in graph.predecessors(graph_index_from_elements(clicked)):\n",
+    "            elif any(graph_index_from_elements(elements[i]) in graph.predecessors(graph_index_from_elements(s)) for s in selected):\n",
     "                elements[i]['data']['color'] = 'yellow'\n",
     "            else:\n",
     "                elements[i]['data']['color'] = 'black'\n",
     "\n",
-    "        if mode == 1 and selected and clicked != selected[-1]:\n",
-    "            edge = graph_edge_as_elements(graph_index_from_elements(selected[-1]), graph_index_from_elements(clicked), {'color':'blue'})\n",
+    "        if mode == 1 and len(selected) >= 2:\n",
+    "            edge = graph_edge_as_elements(graph_index_from_elements(selected[-2]), graph_index_from_elements(selected[-1]), {'color':'blue'})\n",
     "            old_length = len(elements)\n",
     "            elements = list(filter(filter_for_edge(edge), elements))\n",
     "            if len(elements) == old_length:\n",
