--- a/main.ipynb
+++ b/main.ipynb
@@ -201,7 +201,7 @@
     ")\n",
     "def download_graph(data, _):\n",
     "    if ctx.triggered_id == 'download_btn':\n",
-    "        return {'content': data, 'filename':'updated_graph.json'}\n",
+    "        return dcc.send_string(json.dumps(data), filename='updated_graph.json')\n",
     "    raise PreventUpdate\n",
     "\n",
     "\n",
